...
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_username_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username_hint">

                    <com.wikipedia.views.PlainPasteEditText
                        android:layout_width="match_parent"
...
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/login_password_hint"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="?android:textColorHint">
...
